# QtClip

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README_RELEASE.md
out_stage/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  QtClip.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  qtclipsmoke.vcxproj  qtclipsmoke.vcxproj.filters
src/app/: main.cpp
src/core/database/: qcdatabasemanager.cpp  qcdatabasemanager.h  qcdatabaseschema.cpp  qcdatabaseschema.h  qcdbenumcodec.cpp  qcdbenumcodec.h
src/domain/entities/: qcairecord.cpp  qcairecord.h  qcappsetting.cpp  qcappsetting.h  qcattachment.cpp  qcattachment.h  qcexportrecord.cpp  qcexportrecord.h  qcsnippet.cpp  qcsnippet.h  qcstudysession.cpp  qcstudysession.h  qctag.cpp  qctag.h
src/domain/interfaces/: iqcairecordrepository.h  iqcexportrepository.h  iqcsessionrepository.h  iqcsettingsrepository.h  iqcsnippetrepository.h  iqctagrepository.h
src/repository/sqlite/: qcairecordrepositorysqlite.cpp  qcairecordrepositorysqlite.h  qcsessionrepositorysqlite.cpp  qcsessionrepositorysqlite.h  qcsettingsrepositorysqlite.cpp  qcsettingsrepositorysqlite.h  qcsnippetrepositorysqlite.cpp  qcsnippetrepositorysqlite.h  qctagrepositorysqlite.cpp  qctagrepositorysqlite.h
src/services/: qcaiprocessservice.cpp  qcaiprocessservice.h  qcaiprovider.cpp  qcaiprovider.h  qcaiservice.cpp  qcaiservice.h  qcexportdataservice.cpp  qcexportdataservice.h  qcmdexportrenderer.cpp  qcmdexportrenderer.h  qcmdexportservice.cpp  qcmdexportservice.h  qcmockaiprovider.cpp  qcmockaiprovider.h  qcopenaicompatibleprovider.cpp  qcopenaicompatibleprovider.h  qcscreencaptureservice.cpp  qcscreencaptureservice.h  qcsessionservice.cpp  qcsessionservice.h  qcsettingsservice.cpp  qcsettingsservice.h  qcsnippetservice.cpp  qcsnippetservice.h  qctagservice.cpp  qctagservice.h
src/ui/common/: qcuilocalization.cpp  qcuilocalization.h  qcuitheme.cpp  qcuitheme.h
src/ui/dialogs/: qcaisettingsdialog.cpp  qcaisettingsdialog.h  qccreateimagesnippetdialog.cpp  qccreateimagesnippetdialog.h  qccreatesessiondialog.cpp  qccreatesessiondialog.h  qccreatetextsnippetdialog.cpp  qccreatetextsnippetdialog.h  qcquickcapturedialog.cpp  qcquickcapturedialog.h  qcsnippettagdialog.cpp  qcsnippettagdialog.h
src/ui/mainwindow/: qclegacyfiltersupport.cpp  qclegacyfiltersupport.h  qcmainwindow.cpp  qcmainwindow.h  qcnavigationtreedelegate.cpp  qcnavigationtreedelegate.h
src/ui/widgets/: qcscreenshotoverlay.cpp  qcscreenshotoverlay.h
tools/qa/: preflight.ps1
tools/release/: package_release.ps1
translations/: qtclip_zh_CN.ts
